修改pom
git-svn-id: http://code.alibabatech.com/svn/dubbo/trunk@1126 1a56cb94-b969-4eaa-88fa-be21384802f2